Transform: Redo doesn't work properly in Video Sequencer time manipulation #71455

Closed
opened 2019-11-09 18:39:29 +01:00 by Alessio Monti di Sopra · 11 comments

Blender Version
Broken: 2.82

Description of error(s)
Redo doesn't work properly in Video Sequencer Move/Extend from Playhead (TIME_EXTEND mode).

Exact steps for others to reproduce the error

  • Position the current frame in the middle of a selected strip
  • Press E to activate the operator, with the mouse cursor on either side of the strip, to move one of its side
  • Try to modify the result with the redo panel -> the strip will shift, as if both handles were being modified
**Blender Version** Broken: 2.82 **Description of error(s)** Redo doesn't work properly in Video Sequencer *Move/Extend from Playhead* (TIME_EXTEND mode). **Exact steps for others to reproduce the error** - Position the current frame in the middle of a selected strip - Press E to activate the operator, with the mouse cursor on either side of the strip, to move one of its side - Try to modify the result with the redo panel -> the strip will shift, as if both handles were being modified

Added subscriber: @a.monti

Added subscriber: @a.monti
Germano Cavalcante was assigned by Alessio Monti di Sopra 2019-11-09 18:44:03 +01:00

Here it is, if you prefer I can make separate reports for each operator, but they seemed quite related to me.

Here it is, if you prefer I can make separate reports for each operator, but they seemed quite related to me.

Well, it's usually better separated.
But I think that's fine, it looks like it can be solved in a single commit.

Well, it's usually better separated. But I think that's fine, it looks like it can be solved in a single commit.
Germano Cavalcante was unassigned by Dalai Felinto 2019-12-23 13:44:17 +01:00

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Germano Cavalcante self-assigned this 2020-01-25 00:07:47 +01:00

Thansk for the report.
I tried to reproduce each of the problems but I was only able to replicate the "Graph editor Extend (TIME_EXTEND mode)".

So I will remove these other problems from the description, as they are different:

  • Graph editor Extend (TIME_EXTEND mode):

Select a keyframe or a handle and press E to activate the operator

Try to modify the result with the redo panel -> both x and y value are inverted in the panel, resulting in a mirrored transformation

  • NLA Extend (TIME_EXTEND mode):

same steps as for the video sequencer case, but the result will also be mirrored

  • NLA Move :

Select a strip and press G to move it

Try to tweak the result -> the result gets mirrored

  • DopeSheet Extend (TIME_EXTEND mode):

Select two or more keyframes and put the current frame somewhere in between them

Press E to activate the operator

Tweak the operation -> same result as for the vse case, all the keyframes will move

If you are still able to reproduce any of these problems, please create another report.

Thansk for the report. I tried to reproduce each of the problems but I was only able to replicate the `"Graph editor Extend (TIME_EXTEND mode)"`. So I will remove these other problems from the description, as they are different: > * Graph editor *Extend* (TIME_EXTEND mode): > # Select a keyframe or a handle and press E to activate the operator > # Try to modify the result with the redo panel -> both x and y value are inverted in the panel, resulting in a mirrored transformation > > * NLA *Extend* (TIME_EXTEND mode): > # same steps as for the video sequencer case, but the result will also be mirrored > > * NLA *Move* : > # Select a strip and press G to move it > # Try to tweak the result -> the result gets mirrored > > * DopeSheet *Extend* (TIME_EXTEND mode): > # Select two or more keyframes and put the current frame somewhere in between them > # Press E to activate the operator > # Tweak the operation -> same result as for the vse case, all the keyframes will move If you are still able to reproduce any of these problems, please create another report.
Germano Cavalcante changed title from Transform operator: Redo doesn't work properly in time manipulation modes to Transform: Redo doesn't work properly in Video Sequencer time manipulation 2020-02-14 18:11:28 +01:00

Hi! Yes, I can reproduce all of them.
I'll make 4 separate reports then, or for the Graph editor one it's not needed?

Hi! Yes, I can reproduce all of them. I'll make 4 separate reports then, or for the Graph editor one it's not needed?

In #71455#872439, @a.monti wrote:
Hi! Yes, I can reproduce all of them.
I'll make 4 separate reports then, or for the Graph editor one it's not needed?

If you're sure it's a different bug, I don't see why not.
But please give us more clear instructions on how to reproduce it from scratch.

> In #71455#872439, @a.monti wrote: > Hi! Yes, I can reproduce all of them. > I'll make 4 separate reports then, or for the Graph editor one it's not needed? If you're sure it's a different bug, I don't see why not. But please give us more clear instructions on how to reproduce it from scratch.

In #71455#872447, @mano-wii wrote:
If you're sure it's a different bug, I don't see why not.
But please give us more clear instructions on how to reproduce it from scratch.

I'm not sure of anything 🙂
They for sure seem related to each other, so I guess they could be solved in a similar way, but that transform code was a bit too much for me to look into.
I'll try to make the steps clearer in the new reports.

> In #71455#872447, @mano-wii wrote: > If you're sure it's a different bug, I don't see why not. > But please give us more clear instructions on how to reproduce it from scratch. I'm not sure of anything 🙂 They for sure seem related to each other, so I guess they could be solved in a similar way, but that transform code was a bit too much for me to look into. I'll try to make the steps clearer in the new reports.

This issue was referenced by a33b261473

This issue was referenced by a33b261473e95de8d8d438dbb6aa7afe513fb082

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

This issue was referenced by a4df7f78a8

This issue was referenced by a4df7f78a8816ca463cb09f23ac64b989cd8ebb0
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71455
No description provided.