source/blender/editors/include/ED_transform.h
@@ -153,6 +153,7 @@ int BIF_countTransformOrientation(const struct bContext *C);
 #define P_GPENCIL_EDIT (1 << 13)
 #define P_CURSOR_EDIT (1 << 14)
 #define P_CLNOR_INVALIDATE (1 << 15)
+#define P_MOUSE (1 << 16)
 
 void Transform_Properties(struct wmOperatorType *ot, int flags);
 
